--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Formats</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-<h2>Using HTML Formatting Elements</h2><br>
-<b>This text is displayed in bold.</b><br>
-<i>This text is displayed in italic.</i><br>
-<u>This text is underlined.</u><br>
-<small>This text is displayed smaller.</small>
+    <h3>Updating, Emphasizing, and Shifting Text</h3>
+    This is an example of <del>deleted</del> <ins>inserted</ins> text.<br/>
+    The is an example of <strong>Strong</strong> text.<br/>
+    The is an example of <sub>subscript</sub>text.<br/>
+    The is an example of <sup>superscript</sup> text.<br/>
 </body>
 </html>
