--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
    <title>Haquynh</title>
 </head>
 <body>
-    <h3>Updating, Emphasizing, and Shifting Text</h3>
-    This is an example of <del>deleted</del> <ins>inserted</ins> text.<br/>
-    The is an example of <strong>Strong</strong> text.<br/>
-    The is an example of <sub>subscript</sub>text.<br/>
-    The is an example of <sup>superscript</sup> text.<br/>
+   <h1>Quân tối vô sô lô pắp di mô bai với thầy</h1>
 </body>
 </html>
