--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../css/assignment.css">
+    <link rel="stylesheet" href="../css/assignment.css" href="../js/home.js">
     <title>assignment</title>
 </head>
 <body>
@@ -16,31 +16,32 @@
         </header>
 
     <fieldset>
-        <form action="" method="" name="registerForm">
+        <form action="" method="" name="registerForm" id="userForm">
           
             <div class="form-group">
                 <label for="">Fullname</label>                
-                <input type="text" name="fullName" placeholder="Họ và tên">
+                <input type="text" name="fullName" id="name" placeholder="Họ và tên">
                 <span class="msg-error"></span>
                 <i style="display:none; color: green;" class="fa fa-check" aria-hidden="true"></i>
             </div>
 
             <div class="form-group">
                 <label for="">Email</label>
-                <input type="email" name="Email" placeholder="Nhập Email">
+                <input type="email" name="Email" id="email" placeholder="Nhập Email">
                 <span class="msg-error"></span>
             </div>
 
             <div class="form-group">
-                <label for="">Phone</label>
-                <input type="text" required name="phone" placeholder="Số điện thoại">
+                <label for="phone">Số điện thoại:</label>
+                <input type="text" id="phone" name="phone" required>
             </div>
 
             <div class="form-group">
-                <label for="">Giới tính</label>
-                <div class="list-item"><input type="radio" name="gender" value="1"> Nam</div>
-                <div class="list-item"><input type="radio" name="gender" value="2" checked> Nữ</div>
-                <div class="list-item"><input type="radio" name="gender" value="3"> Khác</div>                    
+                <label>Giới tính:</label>
+                <input type="radio" id="male" name="gender" value="Nam" required>
+                <label for="male">Nam</label>
+                <input type="radio" id="female" name="gender" value="Nữ" required>
+                <label for="female">Nữ</label>           
             </div>
 
             <div class="form-group">
@@ -49,13 +50,12 @@
             </div>
 
             <div class="form-group">
-                <label for="">Giới thiệu bản thân</label>
-                <textarea name="" id="" cols="30" rows="5" placeholder="Giới thiệu về bản thân"></textarea>
-            </div>
+                <label for="bio">Giới thiệu bản thân:</label>
+                <textarea id="bio" name="bio" rows="4" required></textarea>
+            </div> <br>
 
-            <div class="form-group">
-                <input type="button" name="submit" value="SUBMIT">
-            </div> 
+                <button type="submit" class="submit">Đăng ký</button>
+            
 
         </form>
         <form action="" name="loginForm"></form>
@@ -67,8 +67,6 @@
         haquynh251106@gmail.com
         </h5>
     </footer>
-   <script>
-
-   </script>
+    <script src="../js/home.js"></script>
 </body>
 </html>
