--- a/html/index.html
+++ b/html/index.html
@@ -33,7 +33,7 @@
 
             <div class="form-group">
                 <label for="phone">Số điện thoại:</label>
-                <input type="text" id="phone" name="phone" required>
+                <input type="text" id="phone" name="phone" placeholder="Phone" required>
             </div>
 
             <div class="form-group">
